# django-grouped-admin-actions

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  tests.yml
grouped_admin_actions/: __version__.py  actions.py  admin.py  apps.py  forms.py
tests/testapp/: actions.py  admin.py  models.py  settings.py
tests/testapp/management/commands/: createtestdata.py
tests/testapp/tests/: test_action_menu.py
