[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-grouped-admin-actions"
dynamic = ["version"]
authors = [{name = "Thomas Leichtfuß", email = "thomas.leichtfuss@posteo.de"}]
description = "Improve your admin action dropdown by using option groups."
license = {text = "BSD License"}
readme = "README.rst"
requires-python = ">=3.7"
dependencies = ["Django>=2.2"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/thomst/django-grouped-admin-actions"
Repository = "https://github.com/thomst/django-grouped-admin-actions"
Documentation = "https://github.com/thomst/django-grouped-admin-actions#readme"

[tool.setuptools]
packages = ["grouped_admin_actions"]

[tool.setuptools.dynamic]
version = {attr = "grouped_admin_actions.__version__.__version__"}
